[tool.poetry]
name = "nnfl"
version = "0.1.0"
description = ""
authors = ["Akash Palrecha <akashpalrecha@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
numpy = "*"
pandas = "*"
jupyter = "*"
Pillow = "*"
matplotlib = "*"
jedi = "*"
pyspark = "*"
torch = "*"
torchvision = "*"
fastai = "*"
streamlit = "*"
torchcontrib = "^0.0.2"
wandb = "^0.8.15"

[tool.poetry.dev-dependencies]
pytest = "^3.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
